product(core): handle "deleteProduct"
